--- a/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core-model/pom.xml
+++ b/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core-model/pom.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.springboot.simple.demo</groupId>
+        <artifactId>springboot-simple-demo-parent</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
     <groupId>com.springboot.simple.demo.core</groupId>
     <artifactId>springboot-simple-demo-core-model</artifactId>
@@ -17,5 +22,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.oceancode-cloud</groupId>
+            <artifactId>oceancode-core</artifactId>
+            <scope>provided</scope>
+
+        </dependency>
     </dependencies>
 </project>
