--- a/springboot-simple-demo/springboot-simple-demo-web/pom.xml
+++ b/springboot-simple-demo/springboot-simple-demo-web/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>h2</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
