--- a/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
+++ b/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.datasource.master.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.master.url=jdbc:h2:mem:test_db;DATABASE_TO_UPPER=false;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.master.driverClassName=org.h2.Driver
 
-spring.datasource.driver-class-name=org.sqlite.JDBC
-# src同级目录下的dbs/db.db
-spring.datasource.url=jdbc:sqlite:dbs/db.db
+spring.datasource.slave1.driver-class-name=org.sqlite.JDBC
+# dbs/db.db at src
+spring.datasource.slave1.url=jdbc:sqlite:dbs/db.db
 
 
 spring.security.basic.enabled=false
