--- a/springboot-simple-demo/services/user-function/pom.xml
+++ b/springboot-simple-demo/services/user-function/pom.xml
@@ -3,14 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.springboot.simple.demo</groupId>
         <artifactId>springboot-simple-demo-parent</artifactId>
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.springboot.simple.demo.core</groupId>
-    <artifactId>springboot-simple-demo-core-function</artifactId>
+    <groupId>com.demo.user.function</groupId>
+    <artifactId>user-function</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -24,17 +25,18 @@
     <dependencies>
         <dependency>
             <groupId>com.oceancode-cloud</groupId>
-            <artifactId>oceancode-core</artifactId>
+            <artifactId>oceancode-common-web-spring-boot</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>com.springboot.simple.demo.core</groupId>
-            <artifactId>springboot-simple-demo-core-model</artifactId>
+            <artifactId>springboot-simple-demo-core</artifactId>
             <version>1.0.0</version>
         </dependency>
 
