--- a/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
+++ b/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
@@ -11,6 +11,8 @@ server.undertow.threads.worker=160
 server.undertow.buffer-size=1024
 server.undertow.direct-buffers=true
 
+logging.file.path=./logs
+
 spring.datasource.master.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.master.url=jdbc:h2:mem:test_db;DATABASE_TO_UPPER=false;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.master.driverClassName=org.h2.Driver
