add user login demo

--- a/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
+++ b/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
@@ -25,5 +25,19 @@ spring.datasource.slave1.url=jdbc:sqlite:dbs/db.db
 spring.security.basic.enabled=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+os.session.token.secret=oceancode
+os.session.cache.key=user-session-info
 
+oc.cache.user-session-info.key-pattern=session:uid:#{#userId}:#{#token}
+oc.cache.user-session-info.source.id=master
+
+
+spring.redis.master.mode=standalone
+spring.redis.master.host=127.0.0.1
+spring.redis.master.port=6379
+spring.redis.master.lettuce.pool.max-active=6000
+spring.redis.master.lettuce.pool.max-idle=100
+spring.redis.master.lettuce.pool.max-wait=100
+spring.redis.master.lettuce.pool.min-idle= 50
+spring.redis.master.lettuce.pool.timeout=500000
 
