--- a/springboot-simple-demo/springboot-simple-demo-web/pom.xml
+++ b/springboot-simple-demo/springboot-simple-demo-web/pom.xml
@@ -39,6 +39,21 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.springboot.simple.demo.core</groupId>
             <artifactId>springboot-simple-demo-core</artifactId>
             <version>1.0.0</version>
