--- a/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core-model/pom.xml
+++ b/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core-model/pom.xml
@@ -24,9 +24,9 @@
     <dependencies>
         <dependency>
             <groupId>com.oceancode-cloud</groupId>
-            <artifactId>oceancode-core</artifactId>
+            <artifactId>oceancode-common-spring-boot</artifactId>
             <scope>provided</scope>
-
         </dependency>
+
     </dependencies>
 </project>
