--- a/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
+++ b/springboot-simple-demo/springboot-simple-demo-web/src/main/resources/application.properties
@@ -11,7 +11,14 @@ server.undertow.threads.worker=160
 server.undertow.buffer-size=1024
 server.undertow.direct-buffers=true
 
+spring.application.name=springboot-simple-demo-web
+
+#log config
 logging.file.path=./logs
+
+# session config
+os.session.token.secret=oceancode
+os.session.cache.key=user-session-info
 
 spring.datasource.master.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.master.url=jdbc:h2:mem:test_db;DATABASE_TO_UPPER=false;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE
@@ -21,23 +28,27 @@ spring.datasource.slave1.driver-class-name=org.sqlite.JDBC
 # dbs/db.db at src
 spring.datasource.slave1.url=jdbc:sqlite:dbs/db.db
 
+spring.redis.redis-master.mode=standalone
+spring.redis.redis-master.host=127.0.0.1
+spring.redis.redis-master.port=6379
+spring.redis.redis-master.lettuce.pool.max-active=6000
+spring.redis.redis-master.lettuce.pool.max-idle=100
+spring.redis.redis-master.lettuce.pool.max-wait=100
+spring.redis.redis-master.lettuce.pool.min-idle= 50
+spring.redis.redis-master.lettuce.pool.timeout=500000
+
 
 spring.security.basic.enabled=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-os.session.token.secret=oceancode
-os.session.cache.key=user-session-info
+
 
 oc.cache.user-session-info.key-pattern=session:uid:#{#userId}:#{#token}
-oc.cache.user-session-info.source.id=master
-
-
-spring.redis.master.mode=standalone
-spring.redis.master.host=127.0.0.1
-spring.redis.master.port=6379
-spring.redis.master.lettuce.pool.max-active=6000
-spring.redis.master.lettuce.pool.max-idle=100
-spring.redis.master.lettuce.pool.max-wait=100
-spring.redis.master.lettuce.pool.min-idle= 50
-spring.redis.master.lettuce.pool.timeout=500000
-
+oc.cache.user-session-info.expire=3600000
+oc.cache.user-session-info.source.id=redisMaster
+oc.cache.user-session-info.empty.enabled=true
+oc.cache.user-session-info.empty.value=nil
+oc.cache.user-session-info.empty.expire=60000
+oc.cache.user-session-info.max-length=10
+oc.cache.user-session-info.expire.random=60000
+oc.cache.user-session-info.replica=1
