--- a/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core/pom.xml
+++ b/springboot-simple-demo/springboot-simple-demo-core/springboot-simple-demo-core/pom.xml
@@ -29,6 +29,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.springboot.simple.demo.core</groupId>
             <artifactId>springboot-simple-demo-core-model</artifactId>
             <version>1.0.0</version>
